upgrade to java 17 / spring boot 2.7.4, fix sonarqube violations