@@ -1,7 +1,6 @@
 package org.wikimedia.commons.donvip.spacemedia.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -18,7 +17,7 @@ public class WebAppController {
 
     @GetMapping("/")
     public String index(Model model) {
-        model.addAttribute("agencies", agencies.stream().sorted().collect(Collectors.toList()));
+        model.addAttribute("agencies", agencies.stream().sorted().toList());
         return "index";
     }
 }
